【项目1】商铺数据加载及存储

--- a/Python基础入门/【项目1】商铺数据加载及存储.ipynb
+++ b/Python基础入门/【项目1】商铺数据加载及存储.ipynb
@@ -9,15 +9,15 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "【项目01】  商铺数据加载及存储\n",
+    "【项目1】  商铺数据加载及存储\n",
     "\n",
     "作业要求：\n",
     "1、成功读取“商铺数据.csv”文件\n",
-    "2、解析数据，存成列表字典格式：[{'var1':value1,'var2':value2,'var3':values,...},...,{}]\n",
-    "3、数据清洗：\n",
+    "2、数据清洗：\n",
     "① comment，price两个字段清洗成数字\n",
-    "② 清除字段缺失的数据\n",
-    "③ commentlist拆分成三个字段，并且清洗成数字\n",
+    "② commentlist拆分成三个字段，并且清洗成数字\n",
+    "③ 清除字段缺失的数据\n",
+    "3、解析数据，存成列表字典格式：[{'var1':value1,'var2':value2,'var3':values,...},...,{}]\n",
     "4、结果存为.pkl文件\n",
     "\n",
     "'''"
